# flexicon_orbit

./: README.md
experiments/grc/: node_level_sic_fd_gui.grc  prr_fd_gui.grc
fd_transceiver_ofdm/: ofdm_link_fd_sic.grc  ofdm_node_fd.grc
fd_transceiver_ofdm/grc/: ofdm_node_fd.grc
fd_transceiver_psk/grc/: dig_sic_off_psk.grc  dig_sic_on_psk.grc  gen_data_psk.grc  gen_data_psk_remote.grc  run_fd_analyzer.py  usrp_tx_sine.grc  usrp_txrx_psk.grc  usrp_txrx_psk_remote.grc  usrp_txrx_psk_spectrum.grc
fd_transceiver_psk/python/: dig_sic_off_psk.py  dig_sic_on_psk.py  func_desired_msg.py  func_dig_sic.py  func_power_diff.py  func_print_desired_msg.py  func_print_msg.py  func_relative_path.py  func_self_msg.py  gen_data_psk.py  run_fd_analyzer.py  run_fd_exp_psk_dig_sic_off.py  run_fd_exp_psk_dig_sic_on.py  usrp_txrx_psk.py  usrp_txrx_psk_spectrum.py
fd_transceiver_simple/: README.md
fd_transceiver_simple/exp/: initialize.sh  initialize_link.sh  topology.txt
fd_transceiver_simple/scripts/: plot_spectrum.m
fd_transceiver_simple/sub20/: Makefile  cmd_pars.h  libsub.c  rf_canc_gen1_config.c  rf_canc_gen3_config.c  sub_app.h
fd_transceiver_simple/uhd/: CMakeLists.txt  dig_sic.cpp  dig_sic.hpp  fd_transceiver_simple.cpp  fft.hpp
gr-fullduplex/: CMakeLists.txt  MANIFEST.md
gr-fullduplex/cmake/Modules/: fullduplexConfig 3.cmake
gr-fullduplex/docs/: README 2.fullduplex  README.md
gr-fullduplex/docs/doxygen/: Doxyfile 3.in
gr-fullduplex/examples/: fd_node_ofdm_si_chnl.grc  top_block.py
gr-fullduplex/grc/: CMakeLists 3.txt  CMakeLists.txt  fullduplex_aloha_control.block.yml  fullduplex_async_divide 2.xml  fullduplex_async_divide.block.yml  fullduplex_carrier_sense.block.yml  fullduplex_compute_ofdm_prr 2.xml  fullduplex_count_packets 2.xml  fullduplex_count_packets.block.yml  fullduplex_csma_control.block.yml  fullduplex_digital_sic 3.xml  fullduplex_digital_sic.block.yml  fullduplex_fd_message_strobe.block.yml  fullduplex_fde_config.block.yml  fullduplex_fde_config.xml  fullduplex_ofdm_constellation 2.xml  fullduplex_ofdm_constellation.block.yml  fullduplex_packet_decap 2.xml  fullduplex_packet_encap 2.xml  fullduplex_packet_encap2 2.xml  fullduplex_packet_encap2.block.yml  fullduplex_parse_stream_sync.block.yml  fullduplex_parse_stream_sync.xml  fullduplex_residual_si_vis.xml  fullduplex_snr_calc 2.xml  fullduplex_snr_calc.block.yml  fullduplex_sub20_init.block.yml  fullduplex_sub20_init.xml  fullduplex_tdd_control.block.yml
gr-fullduplex/grc_test/: plot_complex2dec 3.m  test_packet_encap.grc  test_packet_encap_file 3  top_block 3.py
gr-fullduplex/lib/: CMakeLists.txt  aloha_control_impl.cc  aloha_control_impl.h  async_divide_impl.cc  async_divide_impl.h  carrier_sense_impl.cc  carrier_sense_impl.h  compute_ofdm_prr_impl 2.cc  compute_ofdm_prr_impl.h  count_packets_impl.cc  count_packets_impl.h  csma_control_impl.cc  csma_control_impl.h  digital_sic_impl.cc  digital_sic_impl.h  fd_message_strobe_impl.cc  fd_message_strobe_impl.h  fde_config_impl.cc  fde_config_impl.h  libsub.h  ofdm_constellation_impl.cc  ofdm_constellation_impl.h  packet_decap_impl.cc  packet_decap_impl.h  packet_encap2.cc  packet_encap2_impl.cc  packet_encap2_impl.h  packet_encap2_new.cc  packet_encap2_old.cc  packet_encap2_syncword1.cc  packet_encap_impl.cc  packet_encap_impl.h  parse_stream_sync_impl.cc  parse_stream_sync_impl.h  qa_fullduplex.cc  qa_fullduplex.h  qa_residual_si_vis.cc  qa_residual_si_vis.h  residual_si_vis_impl.cc  residual_si_vis_impl.h  (+7 more)
gr-fullduplex/python/: CMakeLists 3.txt  __init__.py  qa_digital_sic.py  qa_packet_decap.py  qa_packet_encap.py  qa_packet_encap2.py  qa_parse_stream_sync.py  qa_si_chanest.py
gr-fullduplex/swig/: CMakeLists.txt  fullduplex_swig 3.i  fullduplex_swig.i
hardware/AntennaTuner/: Tuner_V4.pcb  Tuner_V4.sch
hardware/Gen-2/: Gen2Board.pcb  Gen2Board.sch  README_IMPORTANT.txt
rf_canceller_gen1/: manual.docx
(+24 files in other folders)
